[gd_scene load_steps=13 format=4 uid="uid://1bfbt5f8oky"]

[ext_resource type="PackedScene" uid="uid://ny55otxbs0t" path="res://Scenes/tile_map.tscn" id="1_1c61v"]
[ext_resource type="Texture2D" uid="uid://db5cscw8pfccj" path="res://Assets/room_tilemap_modular.png" id="1_6aj05"]
[ext_resource type="Script" path="res://Scenes/Main floor rooms/Research/research1.gd" id="1_44mdm"]
[ext_resource type="TileSet" uid="uid://vy7wx3h42jmo" path="res://Scenes/background tileset.tres" id="2_17khl"]
[ext_resource type="PackedScene" uid="uid://d3smthgcyvtgq" path="res://Scenes/player.tscn" id="3_xppy5"]
[ext_resource type="PackedScene" uid="uid://bu52063b5h6qs" path="res://flowerEnemy.tscn" id="6_35rce"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g4i8w"]
texture = ExtResource("1_6aj05")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -4, 4, -4, -4)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -4, 4, -4, -4)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -4, 4, -4, -4)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -4, 4, -4, -4)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, -4, 4)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, -4, 4)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, -4, 4)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, -4, 4)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, 4, 4)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, 4, 4)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, 4, 4)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, 4, 4)
16:0/0 = 0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
18:0/0 = 0
18:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
19:0/0 = 0
19:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0

[sub_resource type="TileSet" id="TileSet_oihvh"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_g4i8w")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcf5h"]
size = Vector2(24, 5)

[sub_resource type="Animation" id="Animation_uxhqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flower:facing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ourop"]
resource_name = "pace"
length = 6.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flower:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 121), Vector2(240, 121)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flower:facing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_880gr"]
_data = {
"RESET": SubResource("Animation_uxhqc"),
"pace": SubResource("Animation_ourop")
}

[node name="Research_1" type="Node2D"]
script = ExtResource("1_44mdm")

[node name="Collision" type="TileMap" parent="."]
tile_set = SubResource("TileSet_oihvh")
format = 2

[node name="Layer0" type="TileMapLayer" parent="Collision"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAJAAwAAQAQAAAAAAAKAAwAAQAQAAAAAAALAAwAAQAQAAAAAAALAA0AAQAQAAAAAAAJAA0AAQAQAAAAAAAKAA0AAQAQAAAAAAAIAAwAAQAQAAAAAAAHAA0AAQAQAAAAAAAIAA0AAQAQAAAAAAAHAAwAAQAQAAAAAAAMABAAAQAQAAAAAAAMABEAAQAQAAAAAAANABEAAQAQAAAAAAAOABEAAQAQAAAAAAAPABEAAQAQAAAAAAAQABEAAQAQAAAAAAARABEAAQAQAAAAAAASABEAAQAQAAAAAAATABEAAQAQAAAAAAAUABEAAQAQAAAAAAAVABEAAQAQAAAAAAAWABEAAQAQAAAAAAAXABEAAQAQAAAAAAAYABEAAQAQAAAAAAAZABEAAQAQAAAAAAAaABEAAQAQAAAAAAAbABEAAQAQAAAAAAAcABEAAQAQAAAAAAAdABEAAQAQAAAAAAAeABEAAQAQAAAAAAAfABEAAQAQAAAAAAAGAA8AAQAQAAAAAAAFABAAAQAQAAAAAAAEABEAAQAQAAAAAAADABIAAQAQAAAAAAAGABAAAQAIAAAAAAAFABEAAQAIAAAAAAAEABIAAQAIAAAAAAADABMAAQAIAAAAAAAHAA4AAQAQAAAAAAAIAA4AAQAQAAAAAAAgABEAAQAQAAAAAAAhABEAAQAQAAAAAAAiABIAAQAEAAAAAAAjABMAAQAEAAAAAAADABQAAQAQAAAAAAAEABQAAQAQAAAAAAAFABQAAQAQAAAAAAAGABQAAQAQAAAAAAAHABQAAQAQAAAAAAAIABQAAQAQAAAAAAAJABQAAQAQAAAAAAAKABQAAQAQAAAAAAALABQAAQAQAAAAAAAMABQAAQAQAAAAAAANABQAAQAQAAAAAAAOABQAAQAQAAAAAAAPABQAAQAQAAAAAAAQABQAAQAQAAAAAAARABQAAQAQAAAAAAASABQAAQAQAAAAAAATABQAAQAQAAAAAAAUABQAAQAQAAAAAAAVABQAAQAQAAAAAAAWABQAAQAQAAAAAAAXABQAAQAQAAAAAAAYABQAAQAQAAAAAAAZABQAAQAQAAAAAAAaABQAAQAQAAAAAAAbABQAAQAQAAAAAAAcABQAAQAQAAAAAAAdABQAAQAQAAAAAAAeABQAAQAQAAAAAAAfABQAAQAQAAAAAAAgABQAAQAQAAAAAAAhABQAAQAQAAAAAAAiABQAAQAQAAAAAAAjABQAAQAQAAAAAAAkABQAAQAQAAAAAAAMAA4AAQAQAAAAAAAHAA8AAQAQAAAAAAAIAA8AAQAQAAAAAAAJAA4AAQAQAAAAAAAKAA4AAQAQAAAAAAALAA4AAQAQAAAAAAACABMAAQAQAAAAAAACABQAAQAQAAAAAAAiABEAAQAQAAAAAAAjABIAAQAQAAAAAAAkABMAAQAQAAAAAAAeAA8AAQAQAAAAAAAfAA8AAQAQAAAAAAAgAA8AAQAQAAAAAAAaAA8AAQAQAAAAAAAZAA8AAQAQAAAAAAAYAA8AAQAQAAAAAAAZAA4AAQAQAAAAAAAaAA4AAQAQAAAAAAAbAA4AAQAQAAAAAAAcAA4AAQAQAAAAAAAdAA4AAQAQAAAAAAAeAA4AAQAQAAAAAAAfAA4AAQAQAAAAAAAXAA8AAQAQAAAAAAAWAA8AAQAQAAAAAAAVAA8AAQAQAAAAAAAUAA8AAQAQAAAAAAATAA8AAQAQAAAAAAASAA8AAQAQAAAAAAARAA8AAQAQAAAAAAAQAA8AAQAQAAAAAAAPAA8AAQAQAAAAAAAOAA8AAQAQAAAAAAANAA8AAQAQAAAAAAAFAA8AAQAQAAAAAAANAA4AAQAQAAAAAAA=")
tile_set = SubResource("TileSet_oihvh")

[node name="background" parent="." instance=ExtResource("1_1c61v")]
tile_set = ExtResource("2_17khl")

[node name="background flat" type="TileMapLayer" parent="background"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAQAAAAAAAAAAEAAAAQAAAAAAAAAAIAAAAQAAAAAAAAAAMAAAAQAAAAAAAAAAQAAAAQAAAAAAAAAAUAAAAQAAAAAAAAAAYAAAAQAAAAAAAAAAcAAAAQAAAAAAAAAAgAAAAQAAAAAAAAAAkAAAAQAAAAAAAAAAoAAAAQAAAAAAAAAAsAAAAQAAAAAAAAAAwAAAAQAAAAAAAAAA0AAAAQAAAAAAAAAA4AAAAQAAAAAAAAAA8AAAAQAAAAAAAAABAAAAAQAAAAAAAAABEAAAAQAAAAAAAAABIAAAAQAAAAAAAAABMAAAAQAAAAAAAAABQAAAAQAAAAAAABAAAAAAAQAAAAAAACAAAAAAAQAAAAAAADAAAAAAAQAAAAAAAEAAAAAAAQAAAAAAAFAAAAAAAQAAAAAAAGAAAAAAAQAAAAAAAHAAAAAAAQAAAAAAAIAAAAAAAQAAAAAAAJAAAAAAAQAAAAAAAKAAAAAAAQAAAAAAALAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAANAAAAAAAQAAAAAAAOAAAAAAAQAAAAAAAPAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAARAAAAAAAQAAAAAAASAAAAAAAQAAAAAAATAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAVAAAAAAAQAAAAAAAWAAAAAAAQAAAAAAAXAAAAAAAQAAAAAAAYAAAAAAAQAAAAAAAZAAAAAAAQAAAAAAAaAAAAAAAQAAAAAAAbAAAAAAAQAAAAAAAcAAAAAAAQAAAAAAAdAAAAAAAQAAAAAAAeAAAAAAAQAAAAAAAfAAAAAAAQAAAAAAAgAAAAAAAQAAAAAAAhAAAAAAAQAAAAAAAiAAAAAAAQAAAAAAAjAAAAAAAQAAAAAAAkAAAAAAAQAAAAAAAlAAAAAAAQAAAAAAAlAAEAAAAQAAAAAAAlAAIAAAAQAAAAAAAlAAMAAAAQAAAAAAAlAAQAAAAQAAAAAAAlAAUAAAAQAAAAAAAlAAYAAAAQAAAAAAAlAAcAAAAQAAAAAAAlAAgAAAAQAAAAAAAlAAkAAAAQAAAAAAAlAAoAAAAQAAAAAAAlAAsAAAAQAAAAAAAlAAwAAAAQAAAAAAAlAA0AAAAQAAAAAAAlAA4AAAAQAAAAAAAlAA8AAAAQAAAAAAAlABAAAAAQAAAAAAAlABEAAAAQAAAAAAAlABIAAAAQAAAAAAAlABMAAAAQAAAAAAAlABQAAAAQAAAAAAABABQAAAAQAAAAAAACABQAAAAQAAAAAAADABQAAAAQAAAAAAAEABQAAAAQAAAAAAAFABQAAAAQAAAAAAAGABQAAAAQAAAAAAAHABQAAAAQAAAAAAAIABQAAAAQAAAAAAAJABQAAAAQAAAAAAAKABQAAAAQAAAAAAALABQAAAAQAAAAAAAMABQAAAAQAAAAAAANABQAAAAQAAAAAAAOABQAAAAQAAAAAAAPABQAAAAQAAAAAAAQABQAAAAQAAAAAAARABQAAAAQAAAAAAASABQAAAAQAAAAAAATABQAAAAQAAAAAAAUABQAAAAQAAAAAAAVABQAAAAQAAAAAAAWABQAAAAQAAAAAAAXABQAAAAQAAAAAAAYABQAAAAQAAAAAAAZABQAAAAQAAAAAAAaABQAAAAQAAAAAAAbABQAAAAQAAAAAAAcABQAAAAQAAAAAAAdABQAAAAQAAAAAAAeABQAAAAQAAAAAAAfABQAAAAQAAAAAAAgABQAAAAQAAAAAAAhABQAAAAQAAAAAAAiABQAAAAQAAAAAAAjABQAAAAQAAAAAAAkABQAAAAQAAAAAAD//xUAAAAQAAAAAAAAABUAAAAQAAAAAAABABUAAAAQAAAAAAACABUAAAAQAAAAAAADABUAAAAQAAAAAAAEABUAAAAQAAAAAAAFABUAAAAQAAAAAAAGABUAAAAQAAAAAAAHABUAAAAQAAAAAAAIABUAAAAQAAAAAAAJABUAAAAQAAAAAAAKABUAAAAQAAAAAAALABUAAAAQAAAAAAAMABUAAAAQAAAAAAANABUAAAAQAAAAAAAOABUAAAAQAAAAAAAPABUAAAAQAAAAAAAQABUAAAAQAAAAAAARABUAAAAQAAAAAAASABUAAAAQAAAAAAATABUAAAAQAAAAAAAUABUAAAAQAAAAAAAVABUAAAAQAAAAAAAWABUAAAAQAAAAAAAXABUAAAAQAAAAAAAYABUAAAAQAAAAAAAZABUAAAAQAAAAAAAaABUAAAAQAAAAAAAbABUAAAAQAAAAAAAcABUAAAAQAAAAAAAdABUAAAAQAAAAAAAeABUAAAAQAAAAAAAfABUAAAAQAAAAAAAgABUAAAAQAAAAAAAhABUAAAAQAAAAAAAiABUAAAAQAAAAAAAjABUAAAAQAAAAAAAkABUAAAAQAAAAAAAlABUAAAAQAAAAAAAmABUAAAAQAAAAAAAmAP//AAAQAAAAAAAmAAAAAAAQAAAAAAAmAAEAAAAQAAAAAAAmAAIAAAAQAAAAAAAmAAMAAAAQAAAAAAAmAAQAAAAQAAAAAAAmAAUAAAAQAAAAAAAmAAYAAAAQAAAAAAAmAAcAAAAQAAAAAAAmAAgAAAAQAAAAAAAmAAkAAAAQAAAAAAAmAAoAAAAQAAAAAAAmAAsAAAAQAAAAAAAmAAwAAAAQAAAAAAAmAA0AAAAQAAAAAAAmAA4AAAAQAAAAAAAmAA8AAAAQAAAAAAAmABAAAAAQAAAAAAAmABEAAAAQAAAAAAAmABIAAAAQAAAAAAAmABMAAAAQAAAAAAAmABQAAAAQAAAAAAD/////AAAQAAAAAAAAAP//AAAQAAAAAAABAP//AAAQAAAAAAACAP//AAAQAAAAAAADAP//AAAQAAAAAAAEAP//AAAQAAAAAAAFAP//AAAQAAAAAAAGAP//AAAQAAAAAAAHAP//AAAQAAAAAAAIAP//AAAQAAAAAAAJAP//AAAQAAAAAAAKAP//AAAQAAAAAAALAP//AAAQAAAAAAAMAP//AAAQAAAAAAANAP//AAAQAAAAAAAOAP//AAAQAAAAAAAPAP//AAAQAAAAAAAQAP//AAAQAAAAAAARAP//AAAQAAAAAAASAP//AAAQAAAAAAATAP//AAAQAAAAAAAUAP//AAAQAAAAAAAVAP//AAAQAAAAAAAWAP//AAAQAAAAAAAXAP//AAAQAAAAAAAYAP//AAAQAAAAAAAZAP//AAAQAAAAAAAaAP//AAAQAAAAAAAbAP//AAAQAAAAAAAcAP//AAAQAAAAAAAdAP//AAAQAAAAAAAeAP//AAAQAAAAAAAfAP//AAAQAAAAAAAgAP//AAAQAAAAAAAhAP//AAAQAAAAAAAiAP//AAAQAAAAAAAjAP//AAAQAAAAAAAkAP//AAAQAAAAAAAlAP//AAAQAAAAAAD//wAAAAAQAAAAAAD//wEAAAAQAAAAAAD//wIAAAAQAAAAAAD//wMAAAAQAAAAAAD//wQAAAAQAAAAAAD//wUAAAAQAAAAAAD//wYAAAAQAAAAAAD//wcAAAAQAAAAAAD//wgAAAAQAAAAAAD//wkAAAAQAAAAAAD//woAAAAQAAAAAAD//wsAAAAQAAAAAAD//wwAAAAQAAAAAAD//w0AAAAQAAAAAAD//w4AAAAQAAAAAAD//w8AAAAQAAAAAAD//xAAAAAQAAAAAAD//xEAAAAQAAAAAAD//xIAAAAQAAAAAAD//xMAAAAQAAAAAAD//xQAAAAQAAAAAAASAAEAAAAQAAAAAAASAAIAAAAQAAAAAAASAAMAAAAQAAAAAAASAAQAAAAQAAAAAAATABAAAAATAAAAAAATABEAAAATAAAAAAATABIAAAATAAAAAAATABMAAAATAAAAAAAQAAwAAAASAAAAAAARAAwAAAASAAAAAAASAAwAAAASAAAAAAATAAwAAAASAAAAAAAUAAwAAAASAAAAAAAVAAwAAAASAAAAAAAWAAwAAAASAAAAAAABAAoAAAARAAAAAAACAAoAAAARAAAAAAADAAoAAAARAAAAAAAEAAoAAAARAAAAAAAhAAoAAAARAAAAAAAiAAoAAAARAAAAAAAjAAoAAAARAAAAAAAkAAoAAAARAAAAAAAhAAEAAAAQAAAAAAAhAAIAAAAQAAAAAAAhAAMAAAAQAAAAAAAhAAQAAAARAAAAAAAhAAUAAAARAAAAAAAhAAYAAAARAAAAAAAhAAcAAAARAAAAAAAhAAgAAAARAAAAAAAhAAkAAAARAAAAAAAiAAEAAAAQAAAAAAAiAAIAAAAQAAAAAAAiAAMAAAARAAAAAAAiAAQAAAARAAAAAAAiAAUAAAARAAAAAAAiAAYAAAARAAAAAAAiAAcAAAARAAAAAAAiAAgAAAARAAAAAAAiAAkAAAARAAAAAAAjAAEAAAAQAAAAAAAjAAIAAAARAAAAAAAjAAMAAAARAAAAAAAjAAQAAAARAAAAAAAjAAUAAAARAAAAAAAjAAYAAAARAAAAAAAjAAcAAAARAAAAAAAjAAgAAAARAAAAAAAjAAkAAAARAAAAAAAkAAEAAAARAAAAAAAkAAIAAAARAAAAAAAkAAMAAAARAAAAAAAkAAQAAAARAAAAAAAkAAUAAAARAAAAAAAkAAYAAAARAAAAAAAkAAcAAAARAAAAAAAkAAgAAAARAAAAAAAkAAkAAAARAAAAAAAhAAsAAAARAAAAAAAhAAwAAAARAAAAAAAhAA0AAAARAAAAAAAhAA4AAAARAAAAAAAhAA8AAAARAAAAAAAhABAAAAARAAAAAAAhABEAAAATAAAAAAAhABIAAAATAAAAAAAhABMAAAATAAAAAAAiAAsAAAARAAAAAAAiAAwAAAARAAAAAAAiAA0AAAARAAAAAAAiAA4AAAARAAAAAAAiAA8AAAARAAAAAAAiABAAAAARAAAAAAAiABEAAAARAAAAAAAiABIAAAATAAAAAAAiABMAAAATAAAAAAAjAAsAAAARAAAAAAAjAAwAAAARAAAAAAAjAA0AAAARAAAAAAAjAA4AAAARAAAAAAAjAA8AAAARAAAAAAAjABAAAAARAAAAAAAjABEAAAARAAAAAAAjABIAAAARAAAAAAAjABMAAAATAAAAAAAkAAsAAAARAAAAAAAkAAwAAAARAAAAAAAkAA0AAAARAAAAAAAkAA4AAAARAAAAAAAkAA8AAAARAAAAAAAkABAAAAARAAAAAAAkABEAAAARAAAAAAAkABIAAAARAAAAAAAkABMAAAARAAAAAAABAAEAAAARAAAAAAABAAIAAAARAAAAAAABAAMAAAARAAAAAAABAAQAAAARAAAAAAABAAUAAAARAAAAAAABAAYAAAARAAAAAAABAAcAAAARAAAAAAABAAgAAAARAAAAAAABAAkAAAARAAAAAAABAAsAAAARAAAAAAABAAwAAAARAAAAAAABAA0AAAARAAAAAAABAA4AAAARAAAAAAABAA8AAAARAAAAAAABABAAAAARAAAAAAABABEAAAARAAAAAAABABIAAAARAAAAAAABABMAAAARAAAAAAACAAEAAAAQAAAAAAACAAIAAAARAAAAAAACAAMAAAARAAAAAAACAAQAAAARAAAAAAACAAUAAAARAAAAAAACAAYAAAARAAAAAAACAAcAAAARAAAAAAACAAgAAAARAAAAAAACAAkAAAARAAAAAAACAAsAAAARAAAAAAACAAwAAAARAAAAAAACAA0AAAARAAAAAAACAA4AAAARAAAAAAACAA8AAAARAAAAAAACABAAAAARAAAAAAACABEAAAARAAAAAAACABIAAAARAAAAAAACABMAAAATAAAAAAADAAEAAAAQAAAAAAADAAIAAAAQAAAAAAADAAMAAAARAAAAAAADAAQAAAARAAAAAAADAAUAAAARAAAAAAADAAYAAAARAAAAAAADAAcAAAARAAAAAAADAAgAAAARAAAAAAADAAkAAAARAAAAAAADAAsAAAARAAAAAAADAAwAAAARAAAAAAADAA0AAAARAAAAAAADAA4AAAARAAAAAAADAA8AAAARAAAAAAADABAAAAARAAAAAAADABEAAAARAAAAAAADABIAAAATAAAAAAADABMAAAATAAAAAAAEAAEAAAAQAAAAAAAEAAIAAAAQAAAAAAAEAAMAAAAQAAAAAAAEAAQAAAARAAAAAAAEAAUAAAARAAAAAAAEAAYAAAARAAAAAAAEAAcAAAARAAAAAAAEAAgAAAARAAAAAAAEAAkAAAARAAAAAAAEAAsAAAARAAAAAAAEAAwAAAARAAAAAAAEAA0AAAARAAAAAAAEAA4AAAARAAAAAAAEAA8AAAARAAAAAAAEABAAAAARAAAAAAAEABEAAAATAAAAAAAEABIAAAATAAAAAAAEABMAAAATAAAAAAAFABAAAAATAAAAAAAFABEAAAATAAAAAAAFABIAAAATAAAAAAAFABMAAAATAAAAAAAGABAAAAATAAAAAAAGABEAAAATAAAAAAAGABIAAAATAAAAAAAGABMAAAATAAAAAAAHABAAAAATAAAAAAAHABEAAAATAAAAAAAHABIAAAATAAAAAAAHABMAAAATAAAAAAAIABAAAAATAAAAAAAIABEAAAATAAAAAAAIABIAAAATAAAAAAAIABMAAAATAAAAAAAJABAAAAATAAAAAAAJABEAAAATAAAAAAAJABIAAAATAAAAAAAJABMAAAATAAAAAAAKABAAAAATAAAAAAAKABEAAAATAAAAAAAKABIAAAATAAAAAAAKABMAAAATAAAAAAALABAAAAATAAAAAAALABEAAAATAAAAAAALABIAAAATAAAAAAALABMAAAATAAAAAAAMABAAAAATAAAAAAAMABEAAAATAAAAAAAMABIAAAATAAAAAAAMABMAAAATAAAAAAANABAAAAATAAAAAAANABEAAAATAAAAAAANABIAAAATAAAAAAANABMAAAATAAAAAAAOABAAAAATAAAAAAAOABEAAAATAAAAAAAOABIAAAATAAAAAAAOABMAAAATAAAAAAAPABAAAAATAAAAAAAPABEAAAATAAAAAAAPABIAAAATAAAAAAAPABMAAAATAAAAAAAQABAAAAATAAAAAAAQABEAAAATAAAAAAAQABIAAAATAAAAAAAQABMAAAATAAAAAAARABAAAAATAAAAAAARABEAAAATAAAAAAARABIAAAATAAAAAAARABMAAAATAAAAAAASABAAAAATAAAAAAASABEAAAATAAAAAAASABIAAAATAAAAAAASABMAAAATAAAAAAAUABAAAAATAAAAAAAUABEAAAATAAAAAAAUABIAAAATAAAAAAAUABMAAAATAAAAAAAVABAAAAATAAAAAAAVABEAAAATAAAAAAAVABIAAAATAAAAAAAVABMAAAATAAAAAAAWABAAAAATAAAAAAAWABEAAAATAAAAAAAWABIAAAATAAAAAAAWABMAAAATAAAAAAAXABAAAAATAAAAAAAXABEAAAATAAAAAAAXABIAAAATAAAAAAAXABMAAAATAAAAAAAYABAAAAATAAAAAAAYABEAAAATAAAAAAAYABIAAAATAAAAAAAYABMAAAATAAAAAAAZABAAAAATAAAAAAAZABEAAAATAAAAAAAZABIAAAATAAAAAAAZABMAAAATAAAAAAAaABAAAAATAAAAAAAaABEAAAATAAAAAAAaABIAAAATAAAAAAAaABMAAAATAAAAAAAbABAAAAATAAAAAAAbABEAAAATAAAAAAAbABIAAAATAAAAAAAbABMAAAATAAAAAAAcABAAAAATAAAAAAAcABEAAAATAAAAAAAcABIAAAATAAAAAAAcABMAAAATAAAAAAAdABAAAAATAAAAAAAdABEAAAATAAAAAAAdABIAAAATAAAAAAAdABMAAAATAAAAAAAeABAAAAATAAAAAAAeABEAAAATAAAAAAAeABIAAAATAAAAAAAeABMAAAATAAAAAAAfABAAAAATAAAAAAAfABEAAAATAAAAAAAfABIAAAATAAAAAAAfABMAAAATAAAAAAAgABAAAAATAAAAAAAgABEAAAATAAAAAAAgABIAAAATAAAAAAAgABMAAAATAAAAAAAMAAEAAAAQAAAAAAAMAAIAAAAQAAAAAAAMAAMAAAAQAAAAAAAMAAQAAAAQAAAAAAANAAEAAAAQAAAAAAANAAIAAAAQAAAAAAANAAMAAAAQAAAAAAANAAQAAAAQAAAAAAAOAAEAAAAQAAAAAAAOAAIAAAAQAAAAAAAOAAMAAAAQAAAAAAAOAAQAAAAQAAAAAAAPAAEAAAAQAAAAAAAPAAIAAAAQAAAAAAAPAAMAAAAQAAAAAAAPAAQAAAAQAAAAAAAQAAEAAAAQAAAAAAAQAAIAAAAQAAAAAAAQAAMAAAAQAAAAAAAQAAQAAAAQAAAAAAARAAEAAAAQAAAAAAARAAIAAAAQAAAAAAARAAMAAAAQAAAAAAARAAQAAAAQAAAAAAATAAEAAAAQAAAAAAATAAIAAAAQAAAAAAATAAMAAAAQAAAAAAATAAQAAAAQAAAAAAAUAAEAAAAQAAAAAAAUAAIAAAAQAAAAAAAUAAMAAAAQAAAAAAAUAAQAAAAQAAAAAAAVAAEAAAAQAAAAAAAVAAIAAAAQAAAAAAAVAAMAAAAQAAAAAAAVAAQAAAAQAAAAAAAWAAEAAAAQAAAAAAAWAAIAAAAQAAAAAAAWAAMAAAAQAAAAAAAWAAQAAAAQAAAAAAAXAAEAAAAQAAAAAAAXAAIAAAAQAAAAAAAXAAMAAAAQAAAAAAAXAAQAAAAQAAAAAAAYAAEAAAAQAAAAAAAYAAIAAAAQAAAAAAAYAAMAAAAQAAAAAAAYAAQAAAAQAAAAAAAZAAEAAAAQAAAAAAAZAAIAAAAQAAAAAAAZAAMAAAAQAAAAAAAZAAQAAAAQAAAAAAAaAAEAAAAQAAAAAAAaAAIAAAAQAAAAAAAaAAMAAAAQAAAAAAAaAAQAAAAQAAAAAAAbAAEAAAAQAAAAAAAbAAIAAAAQAAAAAAAbAAMAAAAQAAAAAAAbAAQAAAAQAAAAAAAcAAEAAAAQAAAAAAAcAAIAAAAQAAAAAAAcAAMAAAAQAAAAAAAcAAQAAAAQAAAAAAAdAAEAAAAQAAAAAAAdAAIAAAAQAAAAAAAdAAMAAAAQAAAAAAAdAAQAAAAQAAAAAAAeAAEAAAAQAAAAAAAeAAIAAAAQAAAAAAAeAAMAAAAQAAAAAAAeAAQAAAAQAAAAAAAfAAEAAAAQAAAAAAAfAAIAAAAQAAAAAAAfAAMAAAAQAAAAAAAfAAQAAAAQAAAAAAAgAAEAAAAQAAAAAAAgAAIAAAAQAAAAAAAgAAMAAAAQAAAAAAAgAAQAAAAQAAAAAAAFAAEAAAAQAAAAAAAFAAIAAAAQAAAAAAAFAAMAAAAQAAAAAAAFAAQAAAAQAAAAAAAGAAEAAAAQAAAAAAAGAAIAAAAQAAAAAAAGAAMAAAAQAAAAAAAGAAQAAAAQAAAAAAAHAAEAAAAQAAAAAAAHAAIAAAAQAAAAAAAHAAMAAAAQAAAAAAAHAAQAAAAQAAAAAAAIAAEAAAAQAAAAAAAIAAIAAAAQAAAAAAAIAAMAAAAQAAAAAAAIAAQAAAAQAAAAAAAJAAEAAAAQAAAAAAAJAAIAAAAQAAAAAAAJAAMAAAAQAAAAAAAJAAQAAAAQAAAAAAAKAAEAAAAQAAAAAAAKAAIAAAAQAAAAAAAKAAMAAAAQAAAAAAAKAAQAAAAQAAAAAAALAAEAAAAQAAAAAAALAAIAAAAQAAAAAAALAAMAAAAQAAAAAAALAAQAAAAQAAAAAAAdAAwAAAAQAAAAAAAdAAsAAAAQAAAAAAAdAAoAAAAQAAAAAAAdAAkAAAASAAAAAAAdAAgAAAASAAAAAAAdAAcAAAASAAAAAAAdAAYAAAASAAAAAAAdAAUAAAASAAAAAAAcAAUAAAASAAAAAAAbAAUAAAASAAAAAAAaAAUAAAASAAAAAAAZAAUAAAASAAAAAAAYAAUAAAASAAAAAAAXAAUAAAASAAAAAAAWAAUAAAASAAAAAAAVAAUAAAASAAAAAAAUAAUAAAASAAAAAAATAAUAAAASAAAAAAASAAUAAAASAAAAAAARAAUAAAASAAAAAAAQAAUAAAASAAAAAAAPAAUAAAASAAAAAAAOAAUAAAASAAAAAAANAAUAAAASAAAAAAAMAAUAAAASAAAAAAALAAUAAAASAAAAAAAKAAUAAAASAAAAAAAJAAUAAAASAAAAAAAIAAUAAAASAAAAAAAHAAUAAAASAAAAAAAGAAUAAAASAAAAAAAFAAUAAAASAAAAAAAFAAYAAAASAAAAAAAFAAcAAAASAAAAAAAFAAgAAAASAAAAAAAFAAkAAAASAAAAAAAFAAoAAAASAAAAAAAFAAsAAAASAAAAAAAFAAwAAAASAAAAAAAFAA0AAAASAAAAAAAFAA4AAAASAAAAAAAFAA8AAAASAAAAAAAGAA8AAAASAAAAAAAGAA4AAAASAAAAAAAGAA0AAAASAAAAAAAGAAwAAAASAAAAAAAGAAsAAAASAAAAAAAGAAoAAAASAAAAAAAGAAkAAAASAAAAAAAGAAgAAAASAAAAAAAGAAcAAAASAAAAAAAGAAYAAAASAAAAAAAHAAYAAAASAAAAAAAHAAcAAAASAAAAAAAHAAgAAAASAAAAAAAHAAkAAAASAAAAAAAHAAoAAAASAAAAAAAHAAsAAAASAAAAAAAHAAwAAAASAAAAAAAHAA0AAAASAAAAAAAHAA4AAAASAAAAAAAHAA8AAAASAAAAAAAIAA8AAAASAAAAAAAIAA4AAAASAAAAAAAIAA0AAAASAAAAAAAIAAwAAAASAAAAAAAIAAsAAAASAAAAAAAIAAoAAAASAAAAAAAIAAkAAAASAAAAAAAIAAgAAAASAAAAAAAIAAcAAAASAAAAAAAIAAYAAAASAAAAAAAJAAYAAAASAAAAAAAJAAcAAAASAAAAAAAJAAgAAAASAAAAAAAJAAkAAAASAAAAAAAJAAoAAAASAAAAAAAJAAsAAAASAAAAAAAJAAwAAAASAAAAAAAJAA0AAAASAAAAAAAJAA4AAAASAAAAAAAJAA8AAAASAAAAAAAKAA8AAAASAAAAAAAKAA4AAAASAAAAAAAKAA0AAAASAAAAAAAKAAwAAAASAAAAAAAKAAsAAAASAAAAAAAKAAoAAAASAAAAAAAKAAkAAAASAAAAAAAKAAgAAAASAAAAAAAKAAcAAAASAAAAAAAKAAYAAAASAAAAAAALAAYAAAASAAAAAAALAAcAAAASAAAAAAALAAgAAAASAAAAAAALAAkAAAASAAAAAAALAAoAAAASAAAAAAALAAsAAAASAAAAAAALAAwAAAASAAAAAAALAA0AAAASAAAAAAALAA4AAAASAAAAAAALAA8AAAASAAAAAAAMAA8AAAASAAAAAAAMAA4AAAASAAAAAAAMAA0AAAASAAAAAAAMAAwAAAASAAAAAAAMAAsAAAASAAAAAAAMAAoAAAASAAAAAAAMAAkAAAASAAAAAAAMAAgAAAASAAAAAAAMAAcAAAASAAAAAAAMAAYAAAASAAAAAAANAAYAAAASAAAAAAANAAcAAAASAAAAAAANAAgAAAASAAAAAAANAAkAAAASAAAAAAANAAoAAAASAAAAAAANAAsAAAASAAAAAAANAAwAAAASAAAAAAANAA0AAAASAAAAAAANAA4AAAASAAAAAAANAA8AAAASAAAAAAAOAA8AAAASAAAAAAAOAA4AAAASAAAAAAAOAA0AAAASAAAAAAAOAAwAAAASAAAAAAAOAAsAAAASAAAAAAAOAAoAAAASAAAAAAAOAAkAAAASAAAAAAAOAAgAAAASAAAAAAAOAAcAAAASAAAAAAAOAAYAAAASAAAAAAAPAAYAAAASAAAAAAAPAAcAAAASAAAAAAAPAAgAAAASAAAAAAAPAAkAAAASAAAAAAAPAAoAAAASAAAAAAAPAAsAAAASAAAAAAAPAAwAAAASAAAAAAAPAA0AAAASAAAAAAAPAA4AAAASAAAAAAAPAA8AAAASAAAAAAAQAA8AAAASAAAAAAAQAA4AAAASAAAAAAAQAA0AAAASAAAAAAARAA0AAAASAAAAAAARAA4AAAASAAAAAAARAA8AAAASAAAAAAASAA8AAAASAAAAAAASAA4AAAASAAAAAAASAA0AAAASAAAAAAATAA0AAAASAAAAAAATAA4AAAASAAAAAAATAA8AAAASAAAAAAAUAA8AAAASAAAAAAAUAA4AAAASAAAAAAAUAA0AAAASAAAAAAAVAA0AAAASAAAAAAAVAA4AAAASAAAAAAAVAA8AAAASAAAAAAAWAA8AAAASAAAAAAAWAA4AAAASAAAAAAAWAA0AAAASAAAAAAAXAA0AAAASAAAAAAAXAAwAAAASAAAAAAAXAAsAAAASAAAAAAAXAAoAAAASAAAAAAAXAAkAAAASAAAAAAAXAAgAAAASAAAAAAAXAAcAAAASAAAAAAAXAAYAAAASAAAAAAAWAAYAAAASAAAAAAAVAAYAAAASAAAAAAAUAAYAAAASAAAAAAATAAYAAAASAAAAAAASAAYAAAASAAAAAAARAAYAAAASAAAAAAAQAAYAAAASAAAAAAAQAAcAAAASAAAAAAAQAAgAAAASAAAAAAAQAAkAAAASAAAAAAAQAAoAAAASAAAAAAAQAAsAAAASAAAAAAARAAsAAAASAAAAAAARAAoAAAASAAAAAAARAAkAAAASAAAAAAARAAgAAAASAAAAAAARAAcAAAASAAAAAAASAAcAAAASAAAAAAASAAgAAAASAAAAAAASAAkAAAASAAAAAAASAAoAAAASAAAAAAASAAsAAAASAAAAAAATAAsAAAASAAAAAAATAAoAAAASAAAAAAATAAkAAAASAAAAAAATAAgAAAASAAAAAAATAAcAAAASAAAAAAAUAAcAAAASAAAAAAAUAAgAAAASAAAAAAAUAAkAAAASAAAAAAAUAAoAAAASAAAAAAAUAAsAAAASAAAAAAAVAAsAAAASAAAAAAAVAAoAAAASAAAAAAAVAAkAAAASAAAAAAAVAAgAAAASAAAAAAAVAAcAAAASAAAAAAAWAAcAAAASAAAAAAAWAAgAAAASAAAAAAAWAAkAAAASAAAAAAAWAAoAAAASAAAAAAAWAAsAAAASAAAAAAAYAAYAAAASAAAAAAAYAAcAAAASAAAAAAAYAAgAAAASAAAAAAAYAAkAAAASAAAAAAAYAAoAAAASAAAAAAAYAAsAAAASAAAAAAAYAAwAAAASAAAAAAAYAA0AAAASAAAAAAAYAA4AAAASAAAAAAAXAA4AAAASAAAAAAAXAA8AAAASAAAAAAAYAA8AAAASAAAAAAAZAA8AAAASAAAAAAAZAA4AAAASAAAAAAAZAA0AAAASAAAAAAAZAAwAAAASAAAAAAAZAAsAAAASAAAAAAAZAAoAAAASAAAAAAAZAAkAAAASAAAAAAAZAAgAAAASAAAAAAAZAAcAAAASAAAAAAAZAAYAAAASAAAAAAAaAAYAAAASAAAAAAAaAAcAAAASAAAAAAAaAAgAAAASAAAAAAAaAAkAAAASAAAAAAAaAAoAAAASAAAAAAAaAAsAAAASAAAAAAAaAAwAAAASAAAAAAAaAA0AAAASAAAAAAAaAA4AAAASAAAAAAAaAA8AAAASAAAAAAAbAA8AAAATAAAAAAAbAA4AAAAQAAAAAAAbAA0AAAAQAAAAAAAbAAwAAAAQAAAAAAAbAAsAAAAQAAAAAAAbAAoAAAAQAAAAAAAbAAkAAAASAAAAAAAbAAgAAAASAAAAAAAbAAcAAAASAAAAAAAbAAYAAAASAAAAAAAcAAYAAAASAAAAAAAcAAcAAAASAAAAAAAcAAgAAAASAAAAAAAcAAkAAAASAAAAAAAcAAoAAAAQAAAAAAAcAAsAAAAQAAAAAAAcAAwAAAAQAAAAAAAcAA0AAAAQAAAAAAAcAA4AAAAQAAAAAAAcAA8AAAATAAAAAAAdAA4AAAAQAAAAAAAdAA0AAAAQAAAAAAAeAA0AAAASAAAAAAAeAAwAAAASAAAAAAAeAAsAAAASAAAAAAAeAAoAAAASAAAAAAAeAAkAAAASAAAAAAAeAAgAAAASAAAAAAAeAAcAAAASAAAAAAAeAAYAAAASAAAAAAAeAAUAAAASAAAAAAAfAAUAAAASAAAAAAAfAAYAAAASAAAAAAAfAAcAAAASAAAAAAAfAAgAAAASAAAAAAAfAAkAAAASAAAAAAAfAAoAAAASAAAAAAAfAAsAAAASAAAAAAAfAAwAAAASAAAAAAAfAA0AAAASAAAAAAAfAA4AAAASAAAAAAAeAA4AAAASAAAAAAAeAA8AAAASAAAAAAAfAA8AAAASAAAAAAAgAA8AAAASAAAAAAAgAA4AAAASAAAAAAAgAA0AAAASAAAAAAAgAAwAAAASAAAAAAAgAAsAAAASAAAAAAAgAAoAAAASAAAAAAAgAAkAAAASAAAAAAAgAAgAAAASAAAAAAAgAAcAAAASAAAAAAAgAAYAAAASAAAAAAAgAAUAAAASAAAAAAAdAA8AAAATAAAAAAA=")
tile_set = ExtResource("2_17khl")

[node name="background detail" type="TileMapLayer" parent="background"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAhAAQAAAAIAAAAAAAiAAMAAAAIAAAAAAAjAAIAAAAIAAAAAAAkAAEAAAAIAAAAAAAEAAQAAAAEAAAAAAADAAMAAAAEAAAAAAACAAIAAAAEAAAAAAABAAEAAAAEAAAAAAAEABAAAAAPAAAAAAADABEAAAAPAAAAAAABABMAAAAPAAAAAAAhABAAAAADAAAAAAAiABEAAAADAAAAAAAjABIAAAADAAAAAAAkABMAAAADAAAAAAACABIAAAAPAAAAAAAdAA4AAAARAAAAAAAdAA0AAAARAAAAAAAdAAwAAAARAAAAAAAdAAsAAAARAAAAAAAdAAoAAAARAAAAAAAdAA8AAAAHAAAAAAA=")
tile_set = ExtResource("2_17khl")

[node name="line details" type="TileMapLayer" parent="background"]
use_parent_material = true
tile_set = ExtResource("2_17khl")

[node name="doors" type="TileMap" parent="."]
tile_set = ExtResource("2_17khl")
format = 2

[node name="Layer0" type="TileMapLayer" parent="doors"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAJAA8AAAAQAAAAAAAKAA8AAAAQAAAAAAALAA8AAAAQAAAAAAAJAA4AAAAQAAAAAAAKAA4AAAAQAAAAAAALAA4AAAAQAAAAAAAJAA0AAAAQAAAAAAAKAA0AAAAQAAAAAAALAA0AAAAQAAAAAAAJAAwAAAAQAAAAAAAKAAwAAAAQAAAAAAALAAwAAAAQAAAAAAA=")
tile_set = ExtResource("2_17khl")

[node name="Door_to_Hallway" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_to_Hallway"]
position = Vector2(84, 122.5)
shape = SubResource("RectangleShape2D_pcf5h")

[node name="Player" parent="." groups=["Player"] instance=ExtResource("3_xppy5")]
position = Vector2(83, 112)
playerSpeed = 60

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["CanvasLayer"]]
scale = Vector2(6, 6)
transform = Transform2D(6, 0, 0, 6, 0, 0)

[node name="Flower" parent="." instance=ExtResource("6_35rce")]
visible = false
position = Vector2(240, 121)
facing = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_880gr")
}

[connection signal="body_entered" from="Door_to_Hallway" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Door_to_Hallway" to="." method="_on_door_to_hallway_body_exited"]
[connection signal="touched" from="Flower" to="." method="_on_flower_touched"]
